--- a/css/complementos/_index.scss
+++ b/css/complementos/_index.scss
@@ -11,7 +11,8 @@
 
 .logoCopasu{
     width: 20%;
-    margin: 50px auto;
+    margin: 0px auto;
+    margin-bottom:50px;
  
     img{
         width:100%;
