--- a/css/complementos/_master.scss
+++ b/css/complementos/_master.scss
@@ -4,8 +4,19 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-body {
-    background: white;
+
+body{
+
+    font-family: 'Montserrat', sans-serif;
+}
+
+body.lucuma{
+    background-color:#af9800;
+    font-family: 'Montserrat', sans-serif;
+}
+
+body.verde{
+    background-color:#205c40;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -15,10 +26,13 @@ body {
     border:1px solid gray;
     margin: auto;
     position: relative;
+    background-color: #fff;
+    
 }
 
 header{
     width:100%;
+
 }
 
 .titulo{
@@ -30,6 +44,13 @@ header{
     text-align: center;
     margin-top:35px;
     margin-bottom:35px;
+}
+
+.cuerpoTexto{
+    background-color: white;
+    margin: 0;
+    padding: 0;
+
 }
 
 .texto{
