--- a/css/complementos/_contactanos.scss
+++ b/css/complementos/_contactanos.scss
@@ -1,5 +1,5 @@
 .mapa{
-    width:700px;
+    width:100%;
     margin: 100px auto;
     overflow: hidden;
     padding: 20px;
@@ -8,7 +8,7 @@
 
 .cuadroContactanos{
 
-    width: 500px;
+    width: 90%;
     margin: auto;
 }
 
