--- a/css/estilosMaster.scss
+++ b/css/estilosMaster.scss
@@ -1,4 +1,5 @@
 @import "complementos/_master";
+@import "complementos/_slider";
 @import "complementos/_menu";
 @import "complementos/_index";
 @import "complementos/_form";
