--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,5 +1,5 @@
 /* Preload images */
-body:after {
+body class="lucuma":after {
   content: url(../img/close.png) url(../img/loading.gif) url(../img/prev.png) url(../img/next.png);
   display: none;
 }
