--- a/css/complementos/_clientes.scss
+++ b/css/complementos/_clientes.scss
@@ -9,7 +9,10 @@
 }
 
 .logoCliente{
+    margin-left: 10px;
     margin-bottom: 20px;
+    padding: 5px;
+    border: 1px black solid;
     cursor: pointer;
 
 
