--- a/css/complementos/_form.scss
+++ b/css/complementos/_form.scss
@@ -7,6 +7,12 @@
     width: 45%;
     overflow: hidden;
     margin-right: 40px;
+    
+    border:1px solid black;
+
+    -webkit-box-shadow: 10px 11px 5px -7px rgba(0,0,0,0.33);
+-moz-box-shadow: 10px 11px 5px -7px rgba(0,0,0,0.33);
+box-shadow: 10px 11px 5px -7px rgba(0,0,0,0.33);
     img{
         background-size: contain;
     }
@@ -31,7 +37,7 @@ label{
 }
 
 input, select {
-    margin: 5px 0;
+    
     display: block;
     &:hover{
         transition: 0.3s ease-in-out;
@@ -42,20 +48,47 @@ input, select {
 input{
     padding: 5px 0;
     color: green;
-
-
+    width:100%;
+    margin: auto;
 }
 
+select{
+    font-size: 1rem;
+    padding: 5px;
+}
+
+
+.boton{
+    margin: 5px 0;
+        font-size: 14px;
+        padding: 10px;
+        border-radius: 3px;
+
+        &:hover{
+            border:.5px solid red;
+        }
+}
+
+
+
+
 .botonReserva{
+    background: rgba($color: red, $alpha: 0.7);
     width: 200px;
     text-align: center;
     padding: 10px;
-    position: relative;
-    bottom: 50px;
-    float: right;
-    background: rgba($color: red, $alpha: 0.7);
-    margin-bottom: 100px;
-    cursor: pointer;
+    margin: auto;
+    
+    // display: block;
+    // width: 200px;
+    // text-align: center;
+    // padding: 10px;
+
+    // bottom: 50px;
+    // float: right;
+    // background: rgba($color: red, $alpha: 0.7);
+    // margin-bottom: 100px;
+    // cursor: pointer;
    
 
     a{
