--- a/css/complementos/_habitaciones.scss
+++ b/css/complementos/_habitaciones.scss
@@ -10,6 +10,7 @@
 .contenedorFotosH{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     padding: 30px;
     justify-content: center;
     
@@ -17,6 +18,7 @@
 
 .cajaFotoH{
     margin: 2px;
+    width: 180px;
 
     img{
         width: 100%;
