--- a/css/complementos/_master.scss
+++ b/css/complementos/_master.scss
@@ -5,29 +5,51 @@
     box-sizing: border-box;
 }
 
+.animado {
+    opacity: 0;
+    transition:  all 1s;
+}
+
+.mostrarArriba {
+    animation: mostrarArriba 1s;
+}
+
+@keyframes .mostrarArriba {
+
+    0%{
+        transform: translateY(20px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+
 body{
 
     font-family: 'Montserrat', sans-serif;
+    background-color:#928923;
 }
 
-body.lucuma{
-    background-color:#af9800;
-    font-family: 'Montserrat', sans-serif;
-}
 
-body.verde{
-    background-color:#205c40;
-    font-family: 'Montserrat', sans-serif;
-}
 
 .contenedorMaster{
     width: 80%;
     max-width: 1000px;
-    border:1px solid gray;
+    // border:1px solid gray;
     margin: auto;
     position: relative;
-    background-color: #fff;
-    
+   
+}
+
+.contenedorFotoIndexS{
+
+    width:100%;
+
+    img{
+        width: 100%;
+        clip-path: polygon(0 0, 100% 0%, 100% 95%, 0% 100%);
+
+    }
 }
 
 header{
@@ -47,7 +69,7 @@ header{
 }
 
 .cuerpoTexto{
-    background-color: white;
+
     margin: 0;
     padding: 0;
 
