--- a/css/complementos/_menu.scss
+++ b/css/complementos/_menu.scss
@@ -1,90 +1,77 @@
-
-.btn-menu{
-    display: block;
-  
-    position:absolute;
-    right:0px;
-    top:0px;
-    
-    cursor: pointer;
-
-    i{
-        color: black;
-    }
+.menu_bar
+ {
+    display: none;
 }
+.contenedor-menu {
+    width: 100%;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.527);
+    -webkit-box-shadow: 0px 4px 5px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 4px 5px -1px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 5px -1px rgba(0,0,0,0.75);
+    z-index: 10;
 
-
-.contenedor-menu{
-    width:20%;
-    min-width: 250px;
-    margin: 50px;
-    display: inline-block;
-    line-height: 5px;
-
-    position:absolute;
-    right:0px;
-    top:0px;
-
-    cursor: pointer;
-
-
-    a{
-        text-decoration: none;
-        color:#494949;
-        display: block;
-        padding: 15px 20px;
-        
-         &:hover{
-         
-            color: #fff;
-    
-        }
-    }
-    ul{
+    ul {
         list-style: none;
+        
     }
 
     .menu {
-        width:100%;
-        display: none;
+        width: 100%;
+       display: flex;
+       justify-content: center;
 
-        position:absolute;
-        right:20px;
-        top:50px;
-
-        li{
+        li {
             font-size: 14px;
+            
         }
 
-    li a {
-    background: #fff;
+        li a {
+            display: block;
+            line-height: 25px;
+      
+            
 
-    &:hover {
-        background: #1a95d5;
-        color: #fff;
-    }
-}
+            &:hover {
+                background: #1a95d5;
+                color: #fff;
+                transition: ease-in-out 0.5s;
+            }
+        }
 
-        .activado > a{
+        .activado>a {
             background: #1a95d5;
             color: #fff;
 
 
         }
 
-        ul{
-            display: none;
-            
-            li a{
+        ul {
+            display: block;
+
+            li a {
                 background: #424242;
-                
+
                 color: #e9e9e9;
 
-                &:hover{
+                &:hover {
                     background: #1a95d5;
                     color: #fff;
-            
+
                 }
+            }
+        }
+
+        a {
+            text-decoration: none;
+            color: #494949;
+            
+            padding: 15px 20px;
+
+            &:hover {
+
+                color: #fff;
+
             }
         }
     }
